added html and php files

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>contact form</title>
+    <link href="css/my-styles.css" rel="stylesheet">
+
 </head>
 
 <body>
 
-<link href="contact-form.css" rel="stylesheet">
+    <header class="w3-container w3-green">  <!--w3-container adds 16 pixels of padding around each element; w3-green makes the background green -->
+        
+        <h1>Sandra Lloyd - Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <div class="fcf-body">
 
